# PAOO-lab

./: .gitignore  CMakeLists.txt  build.sh
include/: Accelerator.hpp  Logger.hpp  Mentor.hpp  Project.hpp  Startup.hpp
src/: Accelerator.cpp  Logger.cpp  Mentor.cpp  Project.cpp  Startup.cpp  main.cpp
